--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -747,6 +747,10 @@
     width: 150px;
     height: auto;
   }
+
+  .file-video iframe {
+    max-width: 100%;
+  }
 }
 
 .pane-card-cycles-card-slideshow-clone {
